# inkscape_shortcuts

./: README.md  main.py  pyproject.toml
src/: actions.py  key_handler.py  latex_editor.py  listener.py  object_manager.py  style_manager.py  window_utils.py
